@@ -1,3 +1,8 @@
+2007-12-17  Ales Hakl  <ales at hakl dot net>
+
+	* src/repl.c (interactive_repl): handle exceptions for parser on
+	line-feeds
+
 2007-12-16  Ales Hakl  <ales at hakl dot net>
 
 	* src/load.c (dfsch_load_so): return some meaningful value
